--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -1,8 +1,9 @@
 km:
   social:
+    share: "ចែក​រំលែក"
     my connections: "បាន​ភ្ជាប់​ទៅ​គណនី"
     connected as: "លោក​អ្នក​ត្រូវ​បាន​ភ្ជាប់​ទៅ %{connection} ជា %{username}."
-    remove connection: "ដក​ចេញ"
+    remove connection: "ដក​តំណរ​ភ្ជាប់​នេះ​ចេញ"
     connection friends: "នេះ​ជា​អ្នក​ប្រើ​ប្រាស់ YouVersion មួយ​ចំនួន​ដែល​លោក​អ្នក​បាន​ភ្ជាប់​ទៅលើ %{connection}"
     errors:
       no friends: "មិន​មានមិត្ត​របស់​អ្នក %{connection} លេច​ឡើង​នៅ​លើ YouVersion នៅ​ឡើយ​ទេ"
@@ -61,11 +62,8 @@ km:
   share error: "សូមទោស មាន​កំហុស​ក្នុង​ពេល​ចែក​រំលែក​សារ​របស់​អ្នក។ សូម​ព្យាយាមម្ដង​ទៀត"
   google plus: "Google +"
   connect to: "ភ្ជាប់​គណនី​របស់​អ្នក %{connection}"
-  connected as user: "លោក​អ្នក​ត្រូវ​បាន​ភ្ជាប់​ទៅ %{connection} ជា %{username}."
   deleted connection: "ការ​ភ្ជាប់​របស់​លោក​អ្នក​ត្រូវ​បាន​ដក​ចេញ​ទៅ %{connection}"
   deleted connection error: "សូម​ទោស មាន​កំហុស​ខ្លះៗ​ក្នុង​ការ​ដក​ចេញ​នូវ​ការ​ភ្ជាប់​របស់​លោក​អ្នក​ទៅ %{connection}"
-  remove connection: "ដក​ចេញ"
-  connection users: "នេះ​ជា​អ្នក​ប្រើ​ប្រាស់ YouVersion មួយ​ចំនួន​ដែល​លោក​អ្នក​បាន​ភ្ជាប់​ទៅលើ %{connection}"
   connection marketing: "YouVersion កាន់តែសប្បាយជាមួយមិត្តភក្ដិ! ភ្ជាប់គណនី YouVersion របស់អ្នក​ទៅកាន់​បណ្ដាញសង្គម​ផ្សេងៗ ហើយបន្តស្វែងរកមិត្តភក្ដិរបស់អ្នក​​នៅលើ​​ YouVersion ។ ការភ្ជាប់គណនីរបស់អ្នកក៏ជាការ​អនុញ្ញាត្តឱ្យអ្នក​ ចែកចាយ មាតិការបស់អ្នកដោយគ្រាន់តែ​ចុចពីរបីដង ។ យើងនឹង​មិន​ចុះប្រកាស​អ្វី​ទាំង​អស់​​ប្រសិនបើគ្មានការអនុញ្ញាត្តពីអ្នកទេនោះ ។ "
   next step connections: "បន្ទាប់ៈ ភ្ជាប់​គណនី​របស់​អ្នក ហើយ​ស្វែង​រក​មិត្ត​របស់​អ្នក"
   no notes found: "%{username} មិន​មាន​កំណត់​ត្រាអី​ទេ"
@@ -82,7 +80,6 @@ km:
   link will be added: "នឹង​ត្រូវ​បន្ថែម​ចូល"
   my picture: "អាប់ឌែត​រូប​ភាព​ខ្ញុំ"
   my notifications: "គ្រប់​គ្រងការ​ដាស់​តឿន"
-  my connections: "បាន​ភ្ជាប់​ទៅ​គណនី"
   my devices: "បាន​ភ្ជាប់​ជាមួយ​ឧបករណ៍"
   language name: "ភាសា​ខ្មែរ"
   sign up: "ចុះ​ឈ្មោះ​"
@@ -132,7 +129,6 @@ km:
   chapter: "ជំពូក"
   bible: "ព្រះគម្ពីរ"
   notes title: "កំណត់​ត្រា"
-  videos: "វីដេអូច្រើន"
   friends: "មិត្ត​ភក្ដិ"
   groups: "ក្រុម"
   mobile: "ទូរសព្ទ័ចល័ត"
@@ -208,9 +204,7 @@ km:
   users:
     unverified heading: "ជិត​ចប់​ហើយ!"
     unverified message: "លោក​អ្នក​ដូច​ជា​ចង់​ចុះ​ឈ្មោះ​ចូល​មក​ក្នុង គណនី ដែល​មិន​ទាន់​បាន​ចុះ​ឈ្មោះ​ចូល​សព្វ​គ្រប់នៅ​ឡើយ​ទេ។ នៅ​សល់​តែ​មួយ​ជំហាន​ទៀត​ប៉ុណ្ណោះ ដោយ​គ្រាន់​តែ​ចុច​តំណរបញ្ជាក់​ ដើម្បី​ទទួល​អ៊ី​ម៉ែល​បញ្ជាក់​ពី YouVersion។ មិន​ទទួល​បាន​មែន​ទេ? ពិនិត្យ​មើល​នៅ​ក្នុង​ថត​សារ​ឥត​បាន​ការ ឬ <a href='%{resend_path}'>ផ្ញើរ​អ៊ី​ម៉ែល​បញ្ជាក់​សារ​ជា​ថ្មី</a>"
-    reset connection: "សូម​ទោស មាន​កំហុស​កើត​មាន​ឡើង។ សូមដក​ចេញ​ហើយ​ភ្ជាប់​ការ​ភ្ជាប់​នេះ​ឡើង​វិញ"
     settings: "ការ​កំណត់"
-    no connection friends: "មិន​មានមិត្ត​របស់​អ្នក %{connection} លេច​ឡើង​នៅ​លើ YouVersion នៅ​ឡើយ​ទេ"
     creation form errors: "កំហុស​មួយ​នេះ(ច្រើន) រារាំង​អ្នក​ក្នុង​ការ​បង្កើត​គណនីៈ"
     profile form errors: "កំហុស​មួយ​នេះ(ច្រើន) រារាំង​អ្នក​ក្នុង​ការ​បន្ទាន់​សម័យ​លើ​ទម្រង់​របស់​អ្នកៈ"
     email address: "អាស័យ​ដ្ឋាន​អ៊ី​ម៉ែល"
@@ -529,6 +523,10 @@ km:
     completed notice: "សូមអបអរ! លោកអ្នកបានបញ្ចប់ គម្រោងអានព្រះគម្ពីររបស់អ្នកហើយ!"
     exit: "ចាក​ចេញ"
     loading sidebar content: "កំពុងផ្ទុកមាតិការបារចំហៀង..."
+  videos:
+    title: "វីដេអូច្រើន"
+    all: "វីដេអូទាំងអស់"
+    related scripture: "អត្តបទគម្ពីរដែលពាក់ព័ន្ធ"
   licenses:
     authorized:
       heading: "មាតិការបស់លោកអ្នកត្រូវបានអនុញ្ញាត្ត"
@@ -657,7 +655,7 @@ km:
     h3: "YouVersion គឺជា​សកល"
     h3 sub: "មាន​ជា​ច្រើន​100ភាសា​ក្នុង​សកល​លោក"
     main: "មនុស្ស​ដប់​លាន​អ្នក​កំពុង​ប្រើ​ប្ាស់ Bible App&trade; ដើម្បី​ធ្វើ​អោយ​ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់​ជា​ផ្នែក​មួយ​នៅ​ក្នុង​ជីវិតរស់​នៅ​របស់​គេ។ ដោន​ឡូដ​កម្មវិធី​ដោយ​ឥត​គិត​ថ្លៃ​ហើយ​ចូល​ទៅ​កាន់​កំណត់​ចំណាំ, កំណត់​ត្រា, និង​គំរោង​អានគម្ពីរ​ពី​គ្រប់​ទៅ​កន្លែង។ សប្បាយ​ជាមួយ​នឹង​ជំនាន់​គម្ពីរ​រាប់​រយ រូម​បញ្ចូល​ទាំង​សំលេង​នៅ​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
-    button h4: "ទៅកាន់ youversion.com/download"
+    button h4: "ចូលទៅកាន់ Bible.com/app"
     button h4 sub: "​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
     download now: "ដោន​ឡូដ​យក​ Bible App ឥឡូវនេះ"
     what people: "អ្វី​ដែល​មនុស្ស​បាន​និយាយ​អំពី​ Bible app ដោយ​ឥត​គិត​ថ្លៃ..."
