--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -1,8 +1,9 @@
 ta:
   social:
+    share: "பகிர்"
     my connections: "இணைக்கப்பட்டுள்ள கணக்குகள்"
     connected as: "நீங்கள் %{connection} -யுடன் %{username} என இணைக்கப்பட்டுள்ளீர்கள்."
-    remove connection: "நீக்கவும்"
+    remove connection: "இந்த தொடர்பை நீக்கவும்"
     connection friends: "இங்கு, நீங்கள் இணைத்துள்ள %{connection} உடன் சில YouVersion பயனாளர்கள் இருக்கிறார்கள்."
     errors:
       no friends: "உங்கள் %{connection} நண்பர்கள் யாரும்  YouVersion -ல் இருப்பதாக இன்னும் தோன்றவில்லை."
@@ -13,6 +14,8 @@ ta:
       name: "Twitter"
     facebook:
       name: "Facebook"
+      errors:
+        expired access: "உங்கள் ஃபேஸ்புக் அனுமதிச்சீட்டு காலாவதியாகிவிட்டது. உங்கள் இணைப்பை நீக்கிவிட்டு ஃபேஸ்புக்கை மறுஇணைப்பு செய்யவும்."
   api:
     users agree bool: "ஒரு கணக்கை உருவாக்க நீங்கள் விதிமுறைகள் மற்றும் நிபந்தனைகளுக்கு ஒப்புக்கொள்ள வேண்டும்."
     users confirm password matches: "புதிய கடவுச்சொற்கள் பொருந்தவில்லை."
@@ -32,6 +35,9 @@ ta:
   meta:
     100million:
       title: "இது தொடங்குவது 100 மில்லியனில் "
+      description: "ஏறக்குறைய 10 கோடி முறை பைபிள் App நிறுவப்பட்டுள்ளது - இது ஒரு வியத்தகு மைல்கல்! ஆனால் நாம் இப்பொழுதே ஆரம்பித்துள்ளோம். இன்றே இலவச பைபிள் App ஐ பதிவிறக்கம் செய்யுங்கள் - அதன்பின் அதை உங்கள் நண்பர்களுடன் பகிர்ந்து கொள்ளுங்கள். நாம் இணைந்து வரலாறு படைப்போம்."
+    mobile:
+      description: "தேவனின் வசனத்தை தங்களது அன்றாட வாழ்வில் ஒரு பகுதியாக செய்ய பல லட்சக்கணக்கான மக்கள் பைபிள் App ஐ பயன்படுத்தி கொண்டிருக்கிறார்கள்.  இலவச பயன்பாட்டை பதிவிறக்கி உங்கள் புக்மார்க்குகள், குறிப்புகள், மற்றும் வாசிப்பு திட்டங்களை எங்கிருந்தும்  அணுகுங்கள். உங்கள் மொபைல் சாதனத்தில் ஆடியோ உட்பட ல் நூற்றுக்கணக்கான பதிப்புகளை கண்டுமகிழலாம்."
     connections:
       index:
         title: "இணைக்கப்பட்டுள்ள கணக்குகள்"
@@ -55,11 +61,8 @@ ta:
   share error: "மன்னிக்கவும், உங்கள் செய்தியை பகிர்ந்து கொள்வதில் பிழை ஏற்பட்டிருக்கிறது. மீண்டும் முயற்சிக்கவும்."
   google plus: "Google +"
   connect to: "உங்கள் %{connection} கணக்கினோடு  இணையுங்கள்"
-  connected as user: "நீங்கள் %{connection} -யுடன் %{username} என இணைக்கப்பட்டுள்ளீர்கள்."
   deleted connection: "%{connection}-னோடுள்ள உங்கள் இணைப்பு வெற்றிகரமாக துண்டிக்கப்பட்டது  "
   deleted connection error: "மன்னிக்கவும், %{connection}-னோடுள்ள உங்கள் இணைப்பை துண்டிப்பதில் பிழை ஏற்பட்டுள்ளது,"
-  remove connection: "நீக்கவும்"
-  connection users: "இங்கு, நீங்கள் இணைத்துள்ள %{connection} உடன் சில YouVersion பயனாளர்கள் இருக்கிறார்கள்."
   connection marketing: " நண்பர்களோடு  YouVersion இன்னும் நன்றாக இருக்கும்.  உங்கள் YouVersion கணக்கை, மற்ற சமூக வளைத்தளங்களுடன் இணைப்பதின் மூலம் உங்கள் நண்பர்களை  YouVersion ல் உடனே கண்டு பிடிக்கலாம். மேலும், உங்கள் கணக்குகளை இணைப்பது, விசயங்களை சில கிளிக்குகளில் பகிர்ந்து கொள்ள வழி வகுக்கிறது.  நாங்கள் உஙளுடைய ஒப்புதல் இல்லாமல் எதையும் பதிவு செய்ய மாட்டோம்.   "
   next step connections: "அடுத்தது: உங்கள் கணக்குகளை இணைத்து உங்கள் நண்பர்களை கண்டு பிடியுங்கள்"
   no notes found: "%{username} எந்த குறிப்புகளும்  பெற்றிருக்கவில்லை."
@@ -76,7 +79,6 @@ ta:
   link will be added: "சேர்க்கப்படும்"
   my picture: "என் படத்தை புதுப்பிக்கவும்"
   my notifications: "அறிவிப்புகளை நிர்வகிக்கவும்"
-  my connections: "இணைக்கப்பட்ட கணக்குகள்"
   my devices: "இணைக்கப்பட்ட கருவிகள்"
   language name: "தமிழ்"
   sign up: "Sign up"
@@ -126,7 +128,6 @@ ta:
   chapter: "அதிகாரம்"
   bible: "வேதாகமம்"
   notes title: "குறிப்புகள்"
-  videos: "வீடியோக்கள்"
   friends: "நண்பர்கள்"
   groups: "குழுக்கள்"
   mobile: "மொபைல்"
@@ -202,9 +203,7 @@ ta:
   users:
     unverified heading: "கிட்டத்தட்ட முடிந்து விட்டது! "
     unverified message: "நீங்கள் முற்றிலுமாக அமைப்பு செய்யப்படாத ஒரு கணக்குக்குள் உள்நுழைய முயற்சிப்பது போல தெரிகிறது. ஒரே ஒரு படிமட்டுமே உங்களுக்கு உள்ளது: வெறுமனே நீங்கள் YouVersion -னிலிருந்து நீங்கள் பெற்ற மின்னஞ்சலிலுள்ள சரிபார்ப்பு இணைப்பை கிளிக் செய்க.கண்டுபிடிக்க முடியவில்லையா? Spam Folder -இல் சோதனை செய்யவும் அல்லது <a href='%{resend_path}'>உறுதி மின்னஞ்சலை மீண்டும் அனுப்புக </a>."
-    reset connection: "மன்னிக்கவும், பிழை ஏற்பட்டுள்ளது.  இந்த இணைப்பை நீக்கி, பின்னர் மீண்டும் இணைத்து பார்க்கவும். "
     settings: "அமைவுகள்"
-    no connection friends: "உங்கள் %{connection} நண்பர்கள் யாரும்  YouVersion -ல் இருப்பதாக இன்னும் தோன்றவில்லை."
     creation form errors: "கீழ்க்கண்ட பிழை(கள்) உங்கள் கணக்கு உருவாக்குவதை தடுக்கின்றது:"
     profile form errors: "கீழ்க்கண்ட பிழை(கள்) உங்கள் சுயவிவரம் புதுபித்தலை தடுக்கின்றது:"
     email address: "மின்னஞ்சல் முகவரி"
@@ -522,6 +521,10 @@ ta:
     completed notice: "வாழ்த்துகள்! உங்கள் வாசிப்பு திட்டத்தை முடித்து விட்டீர்கள். "
     exit: "வெளியேற"
     loading sidebar content: "பக்கப்பட்டியின் உள்ளடக்கத்தை ஏற்றிகொண்டிருக்ககிறது ..."
+  videos:
+    title: "காணொளிகள்"
+    all: "அனைத்து காணொளிகள்"
+    related scripture: "தொடர்புடைய வேதபகுதி"
   licenses:
     authorized:
       heading: "உங்களின்  தகவல்கள் அங்கீகரிக்கப் பட்ருக்கிறது "
@@ -580,6 +583,10 @@ ta:
     headline: "தேவனின் வார்த்தைஅனைவருக்கும்  தேவைப்படுகிறது. "
     subhead: "உலகம் முழுவதுமுள்ள  மக்கள் தங்களின் விரல் நுனியில் பைபிளை பெற்றிருக்க உதவுங்கள்."
     copy: "உங்களால்  உலகிலுள்ள  அனைவருக்கும் இலவச பைபிள் கொடுக்க முடியும் என்று கற்பனை செய்து பாருங்கள். நீங்கள் YouVersion -க்கு கொடுக்க போது,  உங்களால் அதை செய்ய முடியும். மற்றவர்கள் கனவில் மட்டுமே கண்டிருந்த ஒரு காலத்தில் நாம் உயிரோடு இருக்கிறோம் &ndash; தொலைபேசி உள்ள யாரும் பைபிளை அணுகவும்  தேவனுக்கு நம் மீதுள்ள அன்பின் கதையை அனுபவிக்கவும் முடியும்.  இன்னும் அதிகம் மக்கள் வசனத்தில் அதிக நேரம் செலவிட உதவுவதை உங்கள் ஆதரவுடன் தொடரலாம்."
+    amount: "நன்கொடை தொகை"
+    option once: "ஒரு முறை"
+    option monthly: "மாதந்தோறும்"
+    alert empty amount: "தயவுசெய்து நன்கொடை தொகையைப் பதிவு செய்யவும்"
     name: "உங்கள் பெயர்"
     card number: "கடன் அட்டை எண்"
     card exp date: "காலாவதியாகும் தேதி (MMYY)"
@@ -646,7 +653,7 @@ ta:
     h3: "YouVersion உலகமெங்குமுள்ளது "
     h3 sub: "உலகம் முழுவதும் 100 க்கும் மேற்பட்ட மொழிகளில் கிடைக்கிறது."
     main: "தேவனின் வசனத்தை தங்களது அன்றாட வாழ்வில் ஒரு பகுதியாக செய்ய பல லட்சக்கணக்கான மக்கள் பைபிள் App&trade பயன்படுத்தி கொண்டிருக்கிறார்கள்.  இலவச பயன்பாட்டை பதிவிறக்கி உங்கள் புக்மார்க்குகள், குறிப்புகள், மற்றும் வாசிப்பு திட்டங்களை எங்கிருந்தும்  அணுகுங்கள். உங்கள் மொபைல் சாதனத்தில் ஆடியோ உட்பட ல் நூற்றுக்கணக்கான பதிப்புகளை கண்டுமகிழலாம்."
-    button h4: "youversion.com/Download -க்கு செல்க"
+    button h4: "Bible.com/app க்கு செல்லவும்"
     button h4 sub: "உங்கள் மொபைல் சாதனத்தில்"
     download now: "பைபிள் பயன்பாட்டினை இப்போது  பதிவிறக்கம் செய்க "
     what people: "மக்கள் இந்த இலவச பைபிள் பயன்பாடு பற்றி என்ன சொல்கிறார்கள் ..."
@@ -743,12 +750,15 @@ ta:
     100m:
       logo: "YouVersion: பைபிள் app"
       tagline: "இது <em> 100 மில்லியன்  </ em> -இல் தொடங்குகிறது "
+      intro: "10 கோடி நிறுவல்களை, நம்முடைய 5 வது ஆண்டு விழாவான ஜூலை 10 க்குள் பைபிள் App அடைந்து விட  முடியுமா? உங்கள் உதவியுடன் மட்டுமே!"
       after: "உங்களால், 10 கோடி வேதாகம App நிறுவல்களை, நம்முடைய 5 வது ஆண்டு விழாவான ஜூலை 10 அன்று அடைந்து விட்டோம்.  நன்றி!"
       share:
         with friends: "உங்கள் நண்பர்களுடன் பகிர்ந்து கொள்ளுங்கள்"
         fb:
           dialog name: "உங்களிடம் வேதாகம App இருக்கின்றதா?"
           dialog desc: "நான் இந்த பைபிள் பயன்பாட்டை மிகவும் விரும்புகிறேன்! பைபிளை என் அன்றாட வாழ்வின் பகுதியாக உருவாக்க  உண்மையாகவே  அது உதவியது. முன்னிலைப்படுத்த, ஆடியோ வேதாகமத்தை கேட்க, குறிப்பெடுக்க, பக்தி திட்டங்களை பின்பற்ற விடுகிறது மட்டுமல்ல ...  அதில் வீடியோக்களை கூட பார்க்க முடியும்!  இப்போது பதிவிறக்க செய்க (இது முற்றிலும் இலவசம்):http://www.bible.com/app"
+        tw:
+          tweet: "@ YouVersion பைபிள் app என் முகப்பு திரையில் ஒரு நிரந்தர இடத்தை கொண்டுள்ளது. கேட்க, பகிர்ந்து, பார்க்க, படிக்க ... அனைத்தும் ஒரு இலவச பயன்பாட்டில்: bible.com/app"
         em:
           subject: "உங்களிடம் வேதாகம App இருக்கின்றதா?"
           body: "நான் உபயோகித்து வரும்  YouVersion இன் பைபிள் app உங்களுக்கும்  பிடிக்கும் என நினைக்கிறேன். நான் இப்போதெல்லாம் நிறைய பைபிள்  வாசிக்கிறேன்  ஏனென்றால் அது வாசிக்க, காண, கேள்க மற்றும் பகிர்ந்து கொள்ள  மிகவும் எளிது. தேர்ந்தெடுக்கப்பட்ட பைபிள்களும் வாசிப்பு திட்டங்களும் ஒவ்வொரு நாளும் எனக்காக காத்திருக்கின்றன. \n\nஎந்த ஒரு மொபைல் சாதனத்திலும் மிக சுலபமாக (இலவசமாக) அதை இங்கிருந்து பெற முடியும்:\nhttp://www.bible.com/app"
@@ -764,3 +774,4 @@ ta:
         copy: "வாசியுங்கள், கேளுங்கள், பாருங்கள், பகிருங்கள்.உங்களுடைய ஸ்மார்ட்போன் அல்லது Tablet -ற்கான இந்த  பைபிள் app -ஐ பெறுங்கள்:  <a href='http://bible.com/app'>Download Now</a>"
       sidebar:
         tagline: "நாம் ஒன்றிணைந்து வரலாறு படைப்போம்."
+        button: "பைபிள்  App ஐ பகிரவும்"
